@@ -1,0 +1,68 @@
+function vol = sphtri_signed_vol(tri, x)
+% SPHTRI_SIGNED_VOL  Signed volume of the elements of a sphere partitioned
+% into tetrahedra.
+%
+% VOL = sphtri_signed_vol(TRI, X)
+%
+%   TRI is a 3-column matrix. Each row represents the indices of the three
+%   vertices that form a triangle.
+%
+%   X is a 3-column matrix. X(i, :) contains the xyz-coordinates of the
+%   i-th node in the mesh.
+%
+%   VOL is a vector with one element per row in TRI. VOL(i) is the signed
+%   volume of the tetrahedron formed by the three vertices in TRI(i,:) and
+%   the centre of the sphere (0, 0, 0).
+    
+% Author: Ramon Casero <rcasero@gmail.com>
+% Copyright © 2014 University of Oxford
+% Version: 0.1.0
+% $Rev$
+% $Date$
+%
+% University of Oxford means the Chancellor, Masters and Scholars of
+% the University of Oxford, having an administrative office at
+% Wellington Square, Oxford OX1 2JD, UK. 
+%
+% This file is part of Gerardus.
+%
+% This program is free software: you can redistribute it and/or modify
+% it under the terms of the GNU General Public License as published by
+% the Free Software Foundation, either version 3 of the License, or
+% (at your option) any later version.
+%
+% This program is distributed in the hope that it will be useful,
+% but WITHOUT ANY WARRANTY; without even the implied warranty of
+% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+% GNU General Public License for more details. The offer of this
+% program under the terms of the License is subject to the License
+% being interpreted in accordance with English Law and subject to any
+% action against the University of Oxford being under the jurisdiction
+% of the English Courts.
+%
+% You should have received a copy of the GNU General Public License
+% along with this program.  If not, see
+% <http://www.gnu.org/licenses/>.
+
+% check arguments
+narginchk(2, 2);
+nargoutchk(0, 1);
+
+if (size(tri, 2) ~= 3)
+    error('TRI must have 3 columns')
+end
+if (size(x, 2) ~= 3)
+    error('X must have 3 columns')
+end
+
+% number of tetrahedra
+Ntetra = size(tri, 1);
+
+% init output
+vol = zeros(Ntetra, 1);
+
+for I = 1:Ntetra
+    % volume of tratrahedron formed by a triangle and the centre of the
+    % sphere
+    vol(I) = det([x(tri(I, :), :) ones(3, 1); 0 0 0 1]);
+end
